--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,23 @@
 /public/hot
 /public/storage
 /storage/*.key
+/storage/yarus/*
 /vendor
-.env
-.phpunit.result.cache
+/.idea
+/.vscode
+/.vagrant
+/external
+/yarus
+/tests/reports
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+.env
+.phpunit.result.cache
+.env.testing
+package-lock.json
+composer.lock
+_ide_helper.php
+_ide_helper_models.php
+.phpstorm.meta.php
