--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/common.js": "/js/common.js",
+    "/js/jquery-1.9.1.min.js": "/js/jquery-1.9.1.min.js",
+    "/css/app.css": "/css/app.css",
+    "/js/jquery.maskedinput.min.js": "/js/jquery.maskedinput.min.js"
 }
